--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "description": "TS における[型の階層構造のグラフ](./graph.md)を生成します。これは、[代入可能関係](https://www.typescriptlang.org/docs/handbook/type-compatibility.html#subtype-vs-assignment)のグラフであり、下にある型の値を上の型の変数に代入できることを表します。",
   "version": "1.0.0",
   "main": "index.js",
+  "scripts": {
+    "start": "ts-node src/index.ts > graph.md"
+  },
   "dependencies": {
     "ts-node": "10.9.1",
-    "typescript": "5.0.2"
+    "typescript": "5.1.6"
   },
   "repository": {
     "type": "git",
